tests/baselines/reference/optionalBindingParametersInOverloads1.errors.txt
optionalBindingParametersInOverloads1.ts(1,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
optionalBindingParametersInOverloads1.ts(8,6): error TS2322: Type 'boolean' is not assignable to type 'string'.
optionalBindingParametersInOverloads1.ts(8,16): error TS2322: Type 'string' is not assignable to type 'boolean'.


==== optionalBindingParametersInOverloads1.ts (3 errors) ====
    function foo([x, y, z] ?: [string, number, boolean]);
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo(...rest: any[]) {
    
    }
    
    foo(["", 0, false]);
    
    foo([false, 0, ""]);
         ~~~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'string'.
!!! related TS2793 optionalBindingParametersInOverloads1.ts:2:10: The call would have succeeded against this implementation, but implementation signatures of overloads are not externally visible.
                   ~~
!!! error TS2322: Type 'string' is not assignable to type 'boolean'.
!!! related TS2793 optionalBindingParametersInOverloads1.ts:2:10: The call would have succeeded against this implementation, but implementation signatures of overloads are not externally visible.